# pidbot

./: .gitignore  .gitmodules
.github/workflows/: cmake.yml
firmware/: CMakeLists.txt  FreeRTOSConfig.h  app_config.h  bootloader.c  bootloader.h  eeprom.c  eeprom.h  externs.h  globals.c  includes.h  main.c  modbus_config.h  serial.c  serial.h  stm32f103md_bootloader.ld  stm32f103md_firmware.ld  stm32f10x_firm_it.c  stm32f10x_firm_vector.c  stm32f10x_it.c  stm32f10x_vector.c  stm32f1xx.h  tusb_config.h  usage.sh  usb_descriptors.c  usbserial.c  usbserial.h
fupdate/: CMakeLists.txt  config.xml  fupdater.cpp  fupdater.h  main.cpp  modbus_client.cpp  modbus_client.h
fupdate/modbuslib/: modbus.c  modbus.h  modbus_client.cpp  modbus_client.h  modbus_crc_tables.c
modbustest/: CMakeLists.txt  main.cpp  modbus.cpp  modbus.h  uart.cpp  uart.h
schematics/: pidbot.OutJob  pidbot.PcbDoc  pidbot.PcbLib  pidbot.PrjPcb  pidbot.PrjPcbStructure  pidbot.SCHLIB  pidbot.SchDoc  stm32f103c8t6.SchDoc
